# tpk

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  handle.rs  lib.rs  memory.rs  process.rs  thread.rs
src/api_set/: mod.rs
src/binary_file/: mod.rs
src/cast/: mod.rs
src/executors/: mod.rs
src/loadlibrary/: mod.rs
src/logger/: mod.rs
src/main/: mod.rs
src/maker/: mod.rs
src/manualmapper/: mod.rs
src/map_context/: mod.rs
src/memory_section/: mod.rs
src/ntdll/: mod.rs
src/pe_section/: mod.rs
src/portable_executable/: mod.rs
src/process/: mod.rs
src/safe_handle/: mod.rs
src/safe_memory/: mod.rs
src/shellcode/: mod.rs
src/thread/: mod.rs
src/transformer/: mod.rs
